implement option pattern

--- a/ExternalAuthentication/appsettings.json
+++ b/ExternalAuthentication/appsettings.json
@@ -9,9 +9,9 @@
         "Google": {
             "ClientId": "745405021313-h6sj59gf0jh0u8gmsoaer0p2ie11ahpe.apps.googleusercontent.com",
             "ClientSecret": "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",
-            "AuthEndpoint": "https://accounts.google.com/o/oauth2/v2/auth",
-            "TokenEndpoint": "https://oauth2.googleapis.com/token",
-            "UserInfoEndpoint": "https://www.googleapis.com/oauth2/v2/userinfo",
+            "AuthorizationEndPoint": "https://accounts.google.com/o/oauth2/v2/auth?access_type=offline",
+            "TokenEndPoint": "https://oauth2.googleapis.com/token",
+            "UserInfoEndPoint": "https://www.googleapis.com/oauth2/v2/userinfo",
             "CallbackPath": "/oauth2-callback",
             "Scopes": [
                 "https://www.googleapis.com/auth/gmail.readonly",
@@ -24,5 +24,5 @@
         "Host": "localhost",
         "Port": 6379
     },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*"
 }
